--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@tanstack/react-query": "^5.56.2",
     "@types/react-dropzone": "^4.2.2",
     "@types/xlsx": "^0.0.35",
-    "antd": "^5.26.5",
+    "antd": "^5.26.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -61,6 +61,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
@@ -81,6 +82,7 @@
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.0",
+    "@types/react-helmet": "^6.1.11",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
