--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "firebase": "^12.0.0",
     "framer-motion": "^12.23.6",
     "input-otp": "^1.2.4",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "qrcode": "^1.5.4",
