حل التعارضات بعد دمج الريبو

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/react-dropzone": "^4.2.2",
     "@types/xlsx": "^0.0.35",
     "antd": "^5.26.6",
+    "aos": "^2.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -80,6 +81,7 @@
     "@eslint/js": "^9.9.0",
     "@tailwindcss/typography": "^0.5.15",
     "@types/antd": "^0.12.32",
+    "@types/aos": "^3.0.7",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.0",
