--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/xlsx": "^0.0.35",
     "antd": "^5.26.7",
     "aos": "^2.3.4",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
